Changelog
=========

2.1.2 - Unreleased
------------------

- Add MANIFEST.in.
  [WouterVH]

- Transitions vocabulary is translated and sorted by transition id.
  [thomasdesvenain]


2.1.1 - 2011-03-02
------------------

- Exclude 'text/x-plone-outputfilters-html' from the allowable content types
  vocabulary.
  [davisagli]


2.1 - 2011-02-10
----------------

- Remove "Discussion Item" from BAD_TYPES vocabulary.
  [timo]


2.0.2 - 2010-10-27
------------------

- Translation of workflow states vocabularies didn't work in some contexts.
  [thomasdesvenain]


2.0.1 - 2010-07-18
------------------

- Update license to GPL version 2 only.
  [hannosch]


2.0 - 2010-07-01
----------------

- Internationalized editor label (especially for 'None' value).
  [thomasdesvenain]


2.0b4 - 2010-06-13
------------------

- Use the standard libraries doctest module.
  [hannosch]


2.0b3 - 2010-04-07
------------------

- Add a vocabulary to list all Keywords (via the Subject index).
  [esteele]

- Avoid ConstraintNotSatisfied-error when GS-importing the default navigation
  portlet. Fixes https://dev.plone.org/plone/ticket/8380
  [WouterVH]


2.0b2 - 2010-01-24
------------------

- In the skins vocabulary, give the 'Plone Default' skin the title '(Unstyled)'
  to reduce confusion, now that Sunburst is actually the default.
  [davisagli]


2.0b1 - 2009-12-27
------------------

- Added missing zope.browser dependency.
  [hannosch]


2.0a2 - 2009-12-16
------------------

- Avoid the last use of ``SimpleVocabulary.fromItems``. This refs
  http://dev.plone.org/plone/ticket/6480.
  [hannosch]

- Removed funky Acquisition handling for vocabularies inside addforms. This
  closes http://dev.plone.org/plone/ticket/9408.
  [hannosch]


2.0a1 - 2009-11-14
------------------

- Avoid dependencies on zope.app.pagetemplate and zope.app.schema.
  [hannosch]

- Added AvailableEditors vocabulary.
  [robgietema]

- Removed ChangeSet from the BAD_TYPES as this is not a portal type anymore.